add get tasks route and fix some bugs
